--- a/html-relative-links/contact-us/contact-us.html
+++ b/html-relative-links/contact-us/contact-us.html
@@ -13,7 +13,7 @@
       <li><a href="../index.html">Home Page</a></li>
       <li><a href="../about-me/about-me.html">About Me</a></li>
       <li><a href="../projects/projects.html">Projects</a></li>
-      <li><a href="../contact-us/contact-us.html">Contact Us</a></li>
+      <li><a href="contact-us.html">Contact Us</a></li>
     </ul>
     <div>Hello Contact Us!</div>
     <img src="../images/c-sharp.png" alt="Girl holding programming book" />
