--- a/html-forms/index.html
+++ b/html-forms/index.html
@@ -6,26 +6,28 @@
   <body>
     <h1>Coding Form!</h1>
     <div>
-      <label for="email"
-        >Email<br />
+      <label for="email">
+        <p>Email</p>
         <input id="email" type="email" />
       </label>
     </div>
     <div>
-      <label for="select"
-        >Why is coding cool?<br />
+      <label for="select">
+        <p>Why is coding cool?</p>
         <select id="select">
-          <option value="select-an-option">Select an option</option>
-          <option value="because-its-interesting">
-            Because it's interesting
-          </option>
-          <option value="Because-its-fun">Because it's fun</option>
-          <option value="because-its-powerful">Because it's powerful</option>
+          <option value="option">Select an option</option>
+          <option value="interesting">Because it's interesting</option>
+          <option value="fun">Because it's fun</option>
+          <option value="powerful">Because it's powerful</option>
         </select>
       </label>
     </div>
     <div>
-      Favorite Language (choose one)<br />
+      <div>
+        <label for="fav-language">
+          <p>Favorite Language (choose one)</p>
+        </label>
+      </div>
       <label for="html">
         <input type="radio" id="html" name="language" value="html" /> HTML
       </label>
@@ -42,21 +44,22 @@
       </label>
     </div>
     <div>
-      <label for="sign-up"
-        >Would you like to sign up for more information?<br />
+      <label for="sign-up">
+        <p>Would you like to sign up for more information?</p>
         <input type="checkbox" id="sign-up" name="sign-up" value="sign-me-up" />
         Sign me up!
       </label>
     </div>
     <div>
-      <label for="comments"
-        >Comments<br />
+      <label for="comments">
+        <p>Comments</p>
         <textarea id="comments" name="comments" rows="4" cols="25"></textarea>
       </label>
-      <br />
-      <label for="submit">
-        <input type="submit" id="submit" />
-      </label>
+      <div>
+        <label for="submit">
+          <input type="submit" id="submit" />
+        </label>
+      </div>
     </div>
   </body>
 </html>
