Added thead and tbody elements

--- a/html-web-page/index.html
+++ b/html-web-page/index.html
@@ -30,42 +30,46 @@
       your monthly price:
     </p>
     <table>
-      <tr>
-        <th></th>
-        <th>Basic Plan</th>
-        <th>eluxe Plan</th>
-        <th>Jelly Glant Plan</th>
-      </tr>
-      <tr>
-        <td>Three new curated jellies per month</td>
-        <td>&check;</td>
-        <td>&check;</td>
-        <td>&check;</td>
-      </tr>
-      <tr>
-        <td>Monthly jellies come with commemorative mason jars</td>
-        <td></td>
-        <td>&check;</td>
-        <td>&check;</td>
-      </tr>
-      <tr>
-        <td>Free bonus jar of preserves bi-monthly</td>
-        <td></td>
-        <td>&check;</td>
-        <td>&check;</td>
-      </tr>
-      <tr>
-        <td>Free yearly tickets to Jelly Con</td>
-        <td></td>
-        <td></td>
-        <td>&check;</td>
-      </tr>
-      <tr>
-        <td>Monthly Pricing</td>
-        <td>$30</td>
-        <td>$50</td>
-        <td>$60</td>
-      </tr>
+      <thead>
+        <tr>
+          <th></th>
+          <th>Basic Plan</th>
+          <th>eluxe Plan</th>
+          <th>Jelly Glant Plan</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Three new curated jellies per month</td>
+          <td>&check;</td>
+          <td>&check;</td>
+          <td>&check;</td>
+        </tr>
+        <tr>
+          <td>Monthly jellies come with commemorative mason jars</td>
+          <td></td>
+          <td>&check;</td>
+          <td>&check;</td>
+        </tr>
+        <tr>
+          <td>Free bonus jar of preserves bi-monthly</td>
+          <td></td>
+          <td>&check;</td>
+          <td>&check;</td>
+        </tr>
+        <tr>
+          <td>Free yearly tickets to Jelly Con</td>
+          <td></td>
+          <td></td>
+          <td>&check;</td>
+        </tr>
+        <tr>
+          <td>Monthly Pricing</td>
+          <td>$30</td>
+          <td>$50</td>
+          <td>$60</td>
+        </tr>
+      </tbody>
     </table>
     <p>Like what you see? Become a part of the JOTMC family today!</p>
     <form id="selectPlan">
