added style for dropdown and minor spacing adjustments

--- a/css-brochure-form/css-brochure-form/index.html
+++ b/css-brochure-form/css-brochure-form/index.html
@@ -29,10 +29,10 @@
           <p class="bg labeltitle">
             HOW MANY ENGINEERS ARE YOU HIRING IN THE NEXT 6 MONTHS?
           </p>
-          <select id="numberOfEngineers">
-            <option value="1to2">1-2 Engineers</option>
-            <option value="3to5">3-5 Engineers</option>
-            <option value="over5">Over 5</option>
+          <select class="dropdown bg bold" id="numberOfEngineers">
+            <option class="bg" value="1to2">1-2 Engineers</option>
+            <option class="bg" value="3to5">3-5 Engineers</option>
+            <option class="bg" value="over5">Over 5</option>
           </select>
         </label>
         <div class="button">
