Added styling to all row and column classes

--- a/css-layout-classes/index.html
+++ b/css-layout-classes/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="styles.css" />
     <title>CSS Layout Classes</title>
   </head>
   <body>
@@ -8,11 +9,15 @@
     <div class="container">
       <div class="row">
         <div class="column-one-third">
-          <img />
+          <img src="images/link.png" />
         </div>
         <div class="column-one-third">
-          <h2></h2>
-          <p></p>
+          <h2>Super Smash Bros. Ultimate</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
+            reiciendis cum aperiam eligendi perspiciatis recusandae sint a
+            reprehenderit obcaecati. Omnis.
+          </p>
         </div>
         <div class="column-one-third">
           <img />
