Completed css layout classes exercise

--- a/css-layout-classes/index.html
+++ b/css-layout-classes/index.html
@@ -5,8 +5,10 @@
     <title>CSS Layout Classes</title>
   </head>
   <body>
-    <h1>Choose your character!</h1>
     <div class="container">
+      <div class="column-full">
+        <h1>Choose your character!</h1>
+      </div>
       <div class="row">
         <div class="column-one-third">
           <img src="images/link.png" />
@@ -16,43 +18,67 @@
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
             reiciendis cum aperiam eligendi perspiciatis recusandae sint a
-            reprehenderit obcaecati. Omnis.
+            reprehenderit obcaecati. Omnis. Unde aspernatur quam blanditiis
+            laboriosam voluptatibus ratione facilis odio asperiores voluptatum?
           </p>
         </div>
         <div class="column-one-third">
-          <img />
+          <img src="images/yoshi.png" />
         </div>
       </div>
       <div class="row">
         <div class="column-one-fourth">
-          <img />
+          <img src="images/kirby.png" />
         </div>
         <div class="column-one-fourth">
-          <img />
+          <img src="images/fox.png" />
         </div>
         <div class="column-one-fourth">
-          <img />
+          <img src="images/pikachu.png" />
         </div>
         <div class="column-one-fourth">
-          <img />
+          <img src="images/ness.png" />
         </div>
       </div>
       <div class="row">
         <div class="column-two-third">
-          <h2></h2>
-          <p></p>
+          <h2>Donkey Kong</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi vel
+            amet eos doloremque omnis modi vitae dignissimos, reiciendis
+            similique labore. Lorem, ipsum dolor sit amet consectetur
+            adipisicing elit. Quasi vel amet eos doloremque omnis modi vitae
+            dignissimos, reiciendis similique labore.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+            nostrum sint cupiditate nesciunt iste hic, animi enim qui
+            perferendis nobis.
+          </p>
         </div>
         <div class="column-one-third">
-          <img />
+          <img src="images/dk.png" />
         </div>
       </div>
       <div class="row">
         <div class="column-one-third">
-          <img />
+          <img src="images/mario.png" />
         </div>
         <div class="column-two-third">
-          <h2></h2>
-          <p></p>
+          <h2>Mario</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+            expedita molestias ab deserunt autem dolor eius aliquid obcaecati
+            placeat? Nulla eligendi tenetur laborum? Ex sunt voluptates nobis
+            nulla ullam a exercitationem nisi. Unde aspernatur quam blanditiis
+            laboriosam voluptatibus ratione facilis odio asperiores voluptatum?
+          </p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel
+            repudiandae ex maxime necessitatibus animi nihil officia id in
+            magnam assumenda consectetur, culpa ad, quas eveniet! Pariatur et ea
+            provident reprehenderit.
+          </p>
         </div>
       </div>
     </div>
