--- a/css-three-column-layout/index.html
+++ b/css-three-column-layout/index.html
@@ -12,20 +12,46 @@
 <body>
   <section class="blue-bg">
     <div class="container">
-      <div class="row">
+      <div class="row center">
         <h2>Designed for life science. Optimized for SaMD and Digital Health.</h2>
       </div>
+
       <div class="row">
         <div class="column-one-third">
-          <div class="services container">
+          <div class="icon-bg container">
             <img class="icon" src="images/merge.png">
           </div>
-          <div class="center-text">
+          <div class="center">
             <h3>Streamlined QMS</h3>
             <p>A QMS that includes modules for all stages of the product life cycle from Design Control to CAPA</p>
           </div>
         </div>
       </div>
+
+      <div class="row">
+        <div class="column-one-third">
+          <div class="icon-bg container">
+            <img class="icon" src="images/cloud-computing.png">
+          </div>
+          <div class="center">
+            <h3>Integrates with existing tools</h3>
+            <p>Enzyme QMS integrates with your existing tools, such as JIRA, GitHub and Jenkins with Enzyme.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="column-one-third">
+          <div class="icon-bg container">
+            <img class="icon" src="images/cloud-computing.png">
+          </div>
+          <div class="center">
+            <h3>In-depth Onboarding</h3>
+            <p>We train your entire team and provide you with support when and as it's needed.</p>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
 </body>
