completed css two column layout challenge

--- a/css-two-column-layout/index.html
+++ b/css-two-column-layout/index.html
@@ -16,42 +16,42 @@
     </div>
     <div class="row">
       <div class="intro-container">
-        <p class="text-center">We've dedicated thousands of man hours to making healthcare institutions in the Helium network
+        <p class="text-center line-height-20">We've dedicated thousands of man hours to making healthcare institutions in the Helium network
           run 10x more efficiently and deliver an unparalleled quality of care.</p>
       </div>
     </div>
-    <div class="row wrap">
+    <div class="row wrap margin-top">
       <div class="column-half">
-        <div class="column-fourth">
+        <div class="column-third">
           <div class="icon-container">
             <img class="icon" src="images/software.svg">
           </div>
         </div>
-        <div class="column-three-fourth text-container">
+        <div class="column-two-third text-container-top">
           <div class="description">
             <p class="about-title">
               INTUITIVE, </br>
               SMART SOFTWARE
             </p>
-            <p>
+            <p class="line-height-20">
               We build products that transform how healthcare facilities run across Africa - making them radically more efficient operationally and financially, a complete turnaround.
             </p>
           </div>
         </div>
       </div>
       <div class="column-half">
-        <div class="column-fourth">
+        <div class="column-third">
           <div class="icon-container">
             <img class="icon" src="images/practice.svg">
           </div>
         </div>
-        <div class="column-three-fourth text-container">
+        <div class="column-two-third text-container-top">
           <div class="description">
             <p class="about-title">
               PRACTICE MEDICINE, NOT </br>
               ADMINISTRATION
             </p>
-            <p>
+            <p class="line-height-20">
               Our all-in-one electronic health records (EHR), hospital management (HMIS) & billing system
               helps streamline your facility, reduce waste and improve quality of care.
             </p>
@@ -59,17 +59,17 @@
         </div>
       </div>
       <div class="column-half">
-        <div class="column-fourth">
+        <div class="column-third">
           <div class="icon-container">
             <img class="icon" src="images/circumstance.svg">
           </div>
         </div>
-        <div class="column-three-fourth text-container">
+        <div class="column-two-third text-container-bottom">
           <div class="description">
             <p class="about-title">
               FOR ANY CIRCUMSTANCE
             </p>
-            <p>
+            <p class="line-height-20">
               Our intuitive system is built around the peculiarities of your facility; we support offline
               deployments, sync to the cloud and run on any device 24/7.
             </p>
@@ -77,17 +77,17 @@
         </div>
       </div>
       <div class="column-half">
-        <div class="column-fourth">
+        <div class="column-third">
           <div class="icon-container">
             <img class="icon" src="images/data.svg">
           </div>
         </div>
-        <div class="column-three-fourth text-container">
+        <div class="column-two-third text-container-bottom">
           <div class="description">
             <p class="about-title">
               DATA THAT TRANSFORMS
             </p>
-            <p>
+            <p class="line-height-20">
               We understand your facility better than you do; we provide visually-appealing real-time analytics,
               reports and trends at your finger tips.
             </p>
@@ -97,7 +97,7 @@
     </div>
 
     <div class="row">
-      <button>LEARN MORE</button>
+      <button class="learnmore">LEARN MORE</button>
     </div>
   </div>
 </body>
