started structure and styling for hero section

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -11,8 +11,9 @@
 </head>
 <body>
 
-  <div class="container border-bottom">
-    <div class="row navbar">
+  <div class="container">
+
+    <div class="row navbar border-bottom">
       <img class="nav-logo" src="images/logo-blue.svg">
       <div class="row">
         <ul>
@@ -21,9 +22,22 @@
           <li class="navlinks"><a href="">About Us</a></li>
           <li class="navlinks"><a href="">Blog</a></li>
         </ul>
-        <button class="navlinks contact-button">Contact Us</button>
+        <button class="navlinks contact-button"><a href="">Contact Us</a></button>
       </div>
     </div>
+  </div>
+
+  <div class="row">
+    <div class="hero-img">
+      <div class="hero-text">
+        <h1>The EMR Reimagined for </br>
+          Primary Care</h1>
+      </div>
+      <div class="overlay"></div>
+    </div>
+
+
+
   </div>
 
 </body>
