completed hero section

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -30,8 +30,16 @@
   <div class="row">
     <div class="hero-img">
       <div class="hero-text">
-        <h1>The EMR Reimagined for </br>
+        <h1 class="hero-text-h">The EMR Reimagined for </br>
           Primary Care</h1>
+        <p class="hero-text-p">Can't remember the last time you talked with a patient without
+          focusing on the EMR? Canvas lets you rediscover joy in the work you do.
+          Capture meaningful data, identify gaps in care, and move seamlessly
+          between tasks within the platform. You stay present with patients while your
+          whole care team stays up-to-speed. Be a better doctor with Canvas, designed
+          for primary care providers with the help of primary care providers.
+        </p>
+        <button class="hero-button"><a href="">Get Started</a></button>
       </div>
       <div class="overlay"></div>
     </div>
