completed locations section

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -43,6 +43,33 @@
       </div>
       <div class="overlay"></div>
     </div>
+  </div>
+
+  <div class="lightgray-bg">
+
+    <div class="row">
+      <div class="column-full locations-text">
+        <h3 class="locations-text-h">Clinicians Prefer Canvas</h3>
+        <p class="locations-text-p-title">Physician-owned primary care practices across the country have </br>
+          already made Canvas the fabric of their care.
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="column-full locations-text">
+        <div class="row locations-list-container">
+          <p class="column-half locations-list">Cascade Family Practice, Portland OR</p>
+          <p class="column-half locations-list">Ward Medical Clinic, Bonifay, FL</p>
+          <p class="column-half locations-list">Temescal Creek Medicine, Oakland CA</p>
+          <p class="column-half locations-list">Caribou Medical, Towanda PA</p>
+          <p class="column-half locations-list">San Juan Healthcare, Friday Harbor WA</p>
+          <p class="column-half locations-list">Bay Tree Family Care, Red Bay AL</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
 
 
 
