completed learn more section

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -26,7 +26,6 @@
       </div>
     </div>
   </div>
-
   <div class="row">
     <div class="hero-img">
       <div class="hero-text">
@@ -46,18 +45,16 @@
   </div>
 
   <div class="lightgray-bg">
-
     <div class="row">
-      <div class="column-full locations-text">
-        <h3 class="locations-text-h">Clinicians Prefer Canvas</h3>
-        <p class="locations-text-p-title">Physician-owned primary care practices across the country have </br>
+      <div class="column-full section-text">
+        <h3 class="section-text-h">Clinicians Prefer Canvas</h3>
+        <p class="section-text-p">Physician-owned primary care practices across the country have </br>
           already made Canvas the fabric of their care.
         </p>
       </div>
     </div>
-
     <div class="row">
-      <div class="column-full locations-text">
+      <div class="column-full section-text">
         <div class="row locations-list-container">
           <p class="column-half locations-list">Cascade Family Practice, Portland OR</p>
           <p class="column-half locations-list">Ward Medical Clinic, Bonifay, FL</p>
@@ -68,9 +65,16 @@
         </div>
       </div>
     </div>
-
   </div>
 
+  <div class="learn">
+    <div class="row section-text">
+      <div class="column-full">
+        <h3 class="row section-text-h section-padding">Ready to learn more?</h3>
+        <p class="row section-text-p section-padding">Schedule a private meeting now</p>
+      </div>
+    </div>
+  </div>
 
 
   </div>
