--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -12,7 +12,6 @@
 <body>
 
   <div class="container">
-
     <div class="row navbar border-bottom">
       <img class="nav-logo" src="images/logo-blue.svg">
       <div class="row">
@@ -43,8 +42,7 @@
       <div class="overlay"></div>
     </div>
   </div>
-
-  <div class="lightgray-bg">
+  <div class="lightgray-bg container">
     <div class="row">
       <div class="column-full section-text">
         <h3 class="section-text-h">Clinicians Prefer Canvas</h3>
@@ -66,18 +64,50 @@
       </div>
     </div>
   </div>
-
-  <div class="learn">
+  <div class="learn container">
     <div class="row section-text">
-      <div class="column-full">
+      <div class="column-half">
         <h3 class="row section-text-h section-padding">Ready to learn more?</h3>
         <p class="row section-text-p section-padding">Schedule a private meeting now</p>
       </div>
+      <div class="column-half">
+        <div class="row">
+          <button class="column-full learn-button"><a href="">Get Started</a></button>
+        </div>
+      </div>
     </div>
   </div>
-
-
+  <div class="container dark-bg sitemap">
+    <div class="row">
+      <div class="column-fourth">
+        <img class="white-logo" src="images/logo-white.png">
+        <p class="contact-info">2307 Irvine Street, Suite 228</p>
+        <p class="contact-info">San Francisco CA 94122</p>
+        <p class="contact-info">(800) 370-1416</p>
+        <p class="contact-info">info@canvasmedical.com</p>
+      </div>
+      <div class="column-fourth"></div>
+      <div class="column-fourth">
+        <p class="site-links"><a href="">COMPANY</a></p>
+        <p class="site-links"><a href="">About Us</a></p>
+        <p class="site-links"><a href="">Blog</a></p>
+      </div>
+      <div class="column-fourth">
+        <p class="site-links"><a href="">PRODUCT</a></p>
+        <p class="site-links"><a href="">Product</a></p>
+        <p class="site-links"><a href="">Implementation</a></p>
+        <p class="site-links"><a href="">For Health Plans</a></p>
+        <p class="site-links"><a href="">Security</a></p>
+      </div>
+    </div>
   </div>
-
+  <div class="container footer lightgray-bg">
+    <div class="row">
+      <ul>
+        <li class="navlinks"><a class="footer-link" href="">Privacy & Terms</a></li>
+        <li class="navlinks"><a class="footer-link" href="">Contact Us</a></li>
+      </ul>
+    </div>
+  </div>
 </body>
 </html>
