removed empty div element from html and removed margin:auto declarations from column rulesets

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -54,12 +54,12 @@
     <div class="row">
       <div class="column-full section-text">
         <div class="row locations-list-container">
-          <p class="column-half locations-list">Cascade Family Practice, Portland OR</p>
-          <p class="column-half locations-list">Ward Medical Clinic, Bonifay, FL</p>
-          <p class="column-half locations-list">Temescal Creek Medicine, Oakland CA</p>
-          <p class="column-half locations-list">Caribou Medical, Towanda PA</p>
-          <p class="column-half locations-list">San Juan Healthcare, Friday Harbor WA</p>
-          <p class="column-half locations-list">Bay Tree Family Care, Red Bay AL</p>
+          <p class="column-half margin-auto locations-list">Cascade Family Practice, Portland OR</p>
+          <p class="column-half margin-auto locations-list">Ward Medical Clinic, Bonifay, FL</p>
+          <p class="column-half margin-auto locations-list">Temescal Creek Medicine, Oakland CA</p>
+          <p class="column-half margin-auto locations-list">Caribou Medical, Towanda PA</p>
+          <p class="column-half margin-auto locations-list">San Juan Healthcare, Friday Harbor WA</p>
+          <p class="column-half margin-auto locations-list">Bay Tree Family Care, Red Bay AL</p>
         </div>
       </div>
     </div>
@@ -70,23 +70,22 @@
         <h3 class="row section-text-h section-padding">Ready to learn more?</h3>
         <p class="row section-text-p section-padding">Schedule a private meeting now</p>
       </div>
-      <div class="column-half">
-        <div class="row">
+      <div class="column-half margin-auto">
+        <div class="row justify-flex-end">
           <button class="column-full learn-button"><a href="">Get Started</a></button>
         </div>
       </div>
     </div>
   </div>
   <div class="container dark-bg sitemap">
-    <div class="row">
-      <div class="column-fourth">
+    <div class="row justify-content-sb">
+      <div class="column-half">
         <img class="white-logo" src="images/logo-white.png">
         <p class="contact-info">2307 Irvine Street, Suite 228</p>
         <p class="contact-info">San Francisco CA 94122</p>
         <p class="contact-info">(800) 370-1416</p>
         <p class="contact-info">info@canvasmedical.com</p>
       </div>
-      <div class="column-fourth"></div>
       <div class="column-fourth">
         <p class="site-links"><a href="">COMPANY</a></p>
         <p class="site-links"><a href="">About Us</a></p>
