--- a/javascript-modal/index.html
+++ b/javascript-modal/index.html
@@ -6,12 +6,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div>
-    <div class="modal-bg">
-      <div class="modal-box row">
-        <div class="column-full">
-          <p class="modal-text row">Would you like to take a survey?</p>
-          <button class="no-button row">NO</button>
+  <div class="relative display-none">
+    <div class="fixed container">
+      <div class="modal-bg row">
+        <div class="modal-box row">
+          <div class="column-full">
+            <p class="modal-text row">Would you like to take a survey?</p>
+            <button class="no-button row">NO</button>
+          </div>
         </div>
       </div>
     </div>
@@ -19,6 +21,7 @@
   <div>
     <button class="open-button">Open Modal</button>
   </div>
+
   <script src="main.js"></script>
 </body>
 </html>
