removed 'screen and' from media queries

--- a/css-media-queries/at-media.html
+++ b/css-media-queries/at-media.html
@@ -13,7 +13,7 @@
     }
 
     /* your code here 👇 */
-    @media screen and (min-width: 768px) {
+    @media (min-width: 768px) {
       body {
         background-color: papayawhip;
     }
