--- a/css-media-queries/meta-viewport.html
+++ b/css-media-queries/meta-viewport.html
@@ -22,7 +22,7 @@
       background-color: blue;
     }
 
-    @media screen and (min-width: 568px)  {
+    @media (min-width: 568px)  {
       .box {
         background-color: red;
     }
