--- a/css-media-queries/breakpoints.html
+++ b/css-media-queries/breakpoints.html
@@ -19,12 +19,12 @@
     }
 
     /* your code here 👇 */
-    @media screen and (min-width: 575px) {
+    @media (min-width: 575px) {
       .card-wrapper {
         flex-basis: 50%;
     }
 
-    @media screen and (min-width: 767px) {
+    @media (min-width: 767px) {
       .card-wrapper {
         flex-basis: calc(100%/3);
     }
