--- a/javascript-typing-tutor/index.html
+++ b/javascript-typing-tutor/index.html
@@ -7,7 +7,7 @@
 <body>
   <div class="box">
     <p>
-      <span>g</span><span>r</span><span>u</span><span>m</span><span>p</span><span>y</span><span> </span><span>w</span><span>i</span><span>z</span><span>a</span><span>r</span><span>d</span><span>s</span><span> </span><span>m</span><span>a</span><span>k</span><span>e</span><span> </span><span>t</span><span>o</span><span>x</span><span>i</span><span>c</span><span> </span><span>b</span><span>r</span><span>e</span><span>w</span>
+      <span class="next">g</span><span>r</span><span>u</span><span>m</span><span>p</span><span>y</span><span> </span><span>w</span><span>i</span><span>z</span><span>a</span><span>r</span><span>d</span><span>s</span><span> </span><span>m</span><span>a</span><span>k</span><span>e</span><span> </span><span>t</span><span>o</span><span>x</span><span>i</span><span>c</span><span> </span><span>b</span><span>r</span><span>e</span><span>w</span>
     </p>
   </div>
   <script src="main.js"></script>
