--- a/javascript-carousel/index.html
+++ b/javascript-carousel/index.html
@@ -21,11 +21,11 @@
           <img class="pokemon" src="images/001.png">
         </div>
         <div class="row center">
-          <span class="dot" onclick=""></span>
-          <span class="dot" onclick=""></span>
-          <span class="dot" onclick=""></span>
-          <span class="dot" onclick=""></span>
-          <span class="dot" onclick=""></span>
+          <span class="dot" onclick="showImg(0)"></span>
+          <span class="dot" onclick="skipToImg(1)"></span>
+          <span class="dot" onclick="skipToImg(2)"></span>
+          <span class="dot" onclick="skipToImg(3)"></span>
+          <span class="dot" onclick="skipToImg(4)"></span>
         </div>
       </div>
       <div class="column-fourth center">
