revised skiptoImg function to look for data-image attribute value

--- a/javascript-carousel/index.html
+++ b/javascript-carousel/index.html
@@ -20,12 +20,12 @@
         <div class="row center">
           <img class="pokemon" src="images/001.png">
         </div>
-        <div class="row center">
-          <span class="dot" onclick="showImg(0)"></span>
-          <span class="dot" onclick="skipToImg(1)"></span>
-          <span class="dot" onclick="skipToImg(2)"></span>
-          <span class="dot" onclick="skipToImg(3)"></span>
-          <span class="dot" onclick="skipToImg(4)"></span>
+        <div class="row center dot-container">
+          <span class="dot" data-image="0"></span>
+          <span class="dot" data-image="1"></span>
+          <span class="dot" data-image="2"></span>
+          <span class="dot" data-image="3"></span>
+          <span class="dot" data-image="4"></span>
         </div>
       </div>
       <div class="column-fourth center">
