for-loop for dots progress commit

--- a/javascript-carousel/index.html
+++ b/javascript-carousel/index.html
@@ -21,11 +21,11 @@
           <img class="pokemon" src="images/001.png">
         </div>
         <div class="row center dot-container">
-          <span class="dot" data-image="0"></span>
-          <span class="dot" data-image="1"></span>
-          <span class="dot" data-image="2"></span>
-          <span class="dot" data-image="3"></span>
-          <span class="dot" data-image="4"></span>
+          <span><i data-image="0" class="dot far fa-circle"></i></span>
+          <span><i data-image="1" class="dot far fa-circle"></i></span>
+          <span><i data-image="2" class="dot far fa-circle"></i></span>
+          <span><i data-image="3" class="dot far fa-circle"></i></span>
+          <span><i data-image="4" class="dot far fa-circle"></i></span>
         </div>
       </div>
       <div class="column-fourth center">
