completed carousel challenge

--- a/javascript-carousel/index.html
+++ b/javascript-carousel/index.html
@@ -21,7 +21,7 @@
           <img class="pokemon" src="images/001.png">
         </div>
         <div class="row center dot-container">
-          <span><i data-image="0" class="dot far fa-circle"></i></span>
+          <span><i data-image="0" class="dot fas fa-circle"></i></span>
           <span><i data-image="1" class="dot far fa-circle"></i></span>
           <span><i data-image="2" class="dot far fa-circle"></i></span>
           <span><i data-image="3" class="dot far fa-circle"></i></span>
